# brett

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py
include/brett/: aligned_allocator.hpp  background_worker.hpp  cancellation_token.hpp  discrete_curve.hpp  overloaded.hpp  preempting_background_worker.hpp  select_overload.hpp  string_operations.hpp  version_info.hpp
src/: CMakeLists.txt  aligned_allocator.cpp  background_worker.cpp  discrete_curve.cpp  preempting_background_worker.cpp  string_operations.cpp
test_package/: CMakeLists.txt  CMakeUserPresets.json  brett_package_test.cpp  conanfile.py
tests/: CMakeLists.txt  aligned_allocator.t.cpp  discrete_curve.t.cpp  preempting_background_worker.t.cpp  string_operations.t.cpp  test_runner.cpp
